--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- ABOUT ME -->
     
-    <div class="hero">
+    <div class="hero" id="hero">
       <div class="container-xxl">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-7">
@@ -62,7 +62,7 @@
             <div class="about-me">
               <h1>About me 😃</h1>
               <p>Hi, my name is Guilherme. I'm 23 years old and I was born and raised in Brazil 🇧🇷. At the age of 7 I moved to England 🏴󠁧󠁢󠁥󠁮󠁧󠁿 with my parents and returned to Brazil at the age of 9. Since then, I've always wanted to return here and I managed to make that dream come true in 2020. At the time I was studying Civil Engineering, but I decided to leave university to follow my dream of living in England.</p>
-              <p>When I went to Brazil to visit my family and friends, I began to experience a dilemma. I really wanted to return to my home, but at the same time, I didn't want to give up on my dream of living abroad, so I started looking for a way out. After researching the different areas in which I could work from home 🧑🏻‍💻, the one that caught my attention the most was Web and Software development and so I started to embark on this new journey.</p>
+              <p>When I went to Brazil to visit my family and friends, I began to experience a dilemma. I really wanted to return home, but at the same time, I didn't want to give up on my dream of living abroad, so I started looking for a way out. After researching the different areas in which I could work from home 🧑🏻‍💻, the one that caught my attention the most was Web and Software development and so I started to embark on this new journey.</p>
               <p>I am currently studying Full Stack Web Development with Altcademy and I intend, in the future, to start a university course in Computer Science. 👨🏻‍🎓</p>
               <p>This website is a showcase of all the projects I have developed so far. I hope to have this portfolio full of incredible things from now on and be able to embark on this new journey. 🎉</p>
             </div>
@@ -74,7 +74,7 @@
 
     <!-- MY WORK -->
 
-    <div class="my-work">
+    <div class="my-work" id="my-work">
       <div class="container-xxl">
         <h1 id="my-work-head">My work 🖥️</h1>
         <div class="row flex-nowrap overflow-scroll">
@@ -155,7 +155,7 @@
 
     <!-- SKILLS -->
 
-    <div class="skills">
+    <div class="skills" id="skills">
       <div class="container-xxl">
         <div class="row">
           <div class="col-12 col-md-6" id="block-1">
@@ -220,7 +220,7 @@
 
     <div class="footer">
       <div class="container-xxl">
-        <h1>Contact me</h1>
+        <h1 id="footer-head">Contact me</h1>
         <div class="row">
           <div class="col-12 d-flex justify-content-center" id="contact-me">
             <a href="https://www.instagram.com/guilhermecazine/"><i class="fa-brands fa-instagram"></i></a>
@@ -228,9 +228,6 @@
             <a href="https://github.com/guilhermecazine"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
-        
-        <hr />
-
         <div class="row">
           <div class="col-12" id="altcademy">
             <p>Part of Altcademy's Fullstack Program</p>
